--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-family: 'Dosis';
+    src: url('../assets/fonts/fonts/Dosis/Dosis-VariableFont:wght.ttf');
+}
+@font-face {
+    font-family: 'Gupter';
+    src: url('../assets/fonts/fonts/Gupter/Gupter-Regular.ttf');
+}
+@font-face {
+    font-family: 'Inria-Serif';
+    src: url('../assets/fonts/fonts/Inria_Serif/InriaSerif-Regular.ttf');
+}
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../assets/fonts/fonts/Merriweather/Merriweather-Regular.ttf');
+}
+@font-face {
+    font-family: 'Poppins';
+    src: url('../assets/fonts/fonts/Poppins/Poppins-Regular.ttf');
+}
+p {
+    font-family: 'Poppins';
+}
+h2 {
+    font-family: 'Merriweather';
+}
+a {
+    font-family: 'Merriweather';
+}
+h3 {
+    font-family: 'Merriweather';
+}
 img {
     margin-bottom: 0rem;
 }
