--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,3 +23,20 @@ h4 {
     font-family: 'Merriweather';
     font-style: italic;
 }
+.container {
+    max-width: 1111px;
+    width: 90%;
+    margin: 0 auto;
+}
+.container.skinny {
+    max-width: 888px;
+}
+.SinglePost {
+    background: whitesmoke;
+}
+
+.section {
+    width: 100%;
+    padding: 5rem 0;
+    border-bottom: 1px solid #f1f1f1;
+}
