--- a/src/components/form.css
+++ b/src/components/form.css
@@ -10,3 +10,18 @@
 select {
     width: 100%;
 }
+
+.button {
+    background: #1e7e34;
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 100;
+    letter-spacing: 0.05em;
+    font-size: 1rem;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border: none;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
